# Medical-Chatbot

./: app.py  pyproject.toml  requirements.txt  setup.py  store_index.py  template.sh
research/: trials.ipynb
src/: helper.py  prompt.py
